# qdrant-manager

./: .gitignore  README.md  config.ini.sample  config.yaml.sample  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
solr_manager/: cli.py  config.py  utils.py
solr_manager/commands/: batch.py  config.py  create.py  delete.py  get.py  info.py  list.py
tests/: __init__.py  conftest.py  test_batch.py  test_cli.py  test_config.py  test_config_cmd.py  test_create.py  test_delete.py  test_get.py  test_info.py  test_list.py  test_utils.py
tests/cli/: test_batch.py  test_batch_operations.py  test_collections.py  test_connection.py  test_imports.py  test_main.py  test_points.py  test_utils.py
